--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,9 +3,17 @@ image: atlassian/default-image:latest
 pipelines:
   default:
     - step:
+        name: Build Docker Image
+        caches:
+          - docker
+        script:
+          - chmod +x build_docker_image.sh
+          - ./build_docker_image.sh
+    - step:
         name: Build Debug APK
         script:
           - chmod +x build_debug.sh
           - ./build_debug.sh
         artifacts:
           - app/build/outputs/debug/app-debug.apk
+
