close keyboard if connect button is clicked. increase ci/cd memory limit

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,6 +4,7 @@ pipelines:
   default:
     - step:
         name: Build Gradle Project
+        size: 2x
         caches:
           - gradle
         script:
