--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - master
+  workflow_dispatch:
 
 jobs:
   build:
@@ -26,7 +27,9 @@ jobs:
       - name: Decode and save Keystore
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-        run: echo $KEYSTORE_BASE64 | base64 --decode > proxyRackMobileReleaseKey.jks
+        run: |
+          echo $KEYSTORE_BASE64 | base64 --decode > proxyRackMobileReleaseKey.jks
+          echo "KEYSTORE_FILE_PATH=$(pwd)/proxyRackMobileReleaseKey.jks" >> $GITHUB_ENV
 
       - name: Set up Gradle cache
         uses: actions/cache@v3
@@ -44,3 +47,4 @@ jobs:
         with:
           name: APKs
           path: app/build/outputs/**/*.apk
+
