--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.sha }}
-          release_name: Release ${{ github.sha }}
+          tag_name: v-${{ github.sha.substring(0, 7) }}
+          release_name: Release v-${{ github.sha.substring(0, 7) }}
           draft: false
           prerelease: false
 
