--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,14 +48,18 @@ jobs:
           name: APKs
           path: app/build/outputs/**/*.apk
 
+      - name: Set Short SHA
+        shell: bash
+        run: echo "SHORT_SHA=${GITHUB_SHA:0:7}" >> $GITHUB_ENV
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.sha }}
-          release_name: Release ${{ github.sha }}
+          tag_name: v-${{ env.SHORT_SHA }}
+          release_name: Release v-${{ env.SHORT_SHA }}
           draft: false
           prerelease: false
 
@@ -65,6 +69,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: app/build/outputs/release/app-release.apk
+          asset_path: app/build/outputs/apk/release/app-release.apk
           asset_name: proxy_control.apk
           asset_content_type: application/vnd.android.package-archive
