--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,29 +48,27 @@ jobs:
           name: APKs
           path: app/build/outputs/**/*.apk
 
-      - name: Set Short SHA
-        shell: bash
-        run: echo "SHORT_SHA=${GITHUB_SHA:0:7}" >> $GITHUB_ENV
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+  release:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      pull-requests: write # to be able to comment on released pull requests
+      id-token: write # to enable use of OIDC for npm provenance
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+      - name: Install dependencies
+        run: npm clean-install
+      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
+        run: npm audit signatures
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v-${{ env.SHORT_SHA }}
-          release_name: Release v-${{ env.SHORT_SHA }}
-          draft: false
-          prerelease: false
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/master')
-
-      - name: Upload APKs to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: app/build/outputs/apk/release/app-release.apk
-          asset_name: proxy_control.apk
-          asset_content_type: application/vnd.android.package-archive
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/master')
+        run: npx semantic-release
