--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         tools:targetApi="31">
 
         <service
-            android:name=".ConnectionService"
+            android:name=".domain.ConnectionService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="specialUse"
