--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,10 @@
     <meta-data android:name="io.sentry.traces.sample-rate" android:value="1.0" />
     <!-- enable profiling when starting transactions, adjust in production env -->
     <meta-data android:name="io.sentry.traces.profiling.sample-rate" android:value="1.0" />
-</application>
+    <!-- enable session replay -->
+    <meta-data android:name="io.sentry.session-replay.on-error-sample-rate" android:value="1.0" />
+    <meta-data android:name="io.sentry.session-replay.session-sample-rate" android:value="0.1" />
+
+    </application>
 
 </manifest>
