--- a/.releaserc
+++ b/.releaserc
@@ -3,7 +3,7 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "semantic-release-export-data"
+    "semantic-release-export-data",
     [
       "@semantic-release/github",
       {
