--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,14 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Change versionName in build.gradle
-        run: sed -i 's/versionName = "[^"]*"/versionName = "${{ needs.get-next-version.outputs.new-release-version }}"/' app/build.gradle.kts
+        run: |
+          DEFAULT_VERSION="1.3.8"
+          VERSION="${{ needs.get-next-version.outputs.new-release-version }}"
+          if [ -z "$VERSION" ]; then
+          VERSION=$DEFAULT_VERSION
+          fi
+          sed -i "s/versionName = \"[^\"]*\"/versionName = \"$VERSION\"/" app/build.gradle.kts
+        #run: sed -i 's/versionName = "[^"]*"/versionName = "${{ needs.get-next-version.outputs.new-release-version }}"/' app/build.gradle.kts
 
       - name: Run Tests
         run: ./gradlew test
