--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ on:
   pull_request:
     branches:
       - master
-      - easy_updates
   workflow_dispatch:
 
 jobs:
@@ -73,10 +72,21 @@ jobs:
           VERSION=$DEFAULT_VERSION
           fi
           sed -i "s/versionName = \"[^\"]*\"/versionName = \"$VERSION\"/" app/build.gradle.kts
-        #run: sed -i 's/versionName = "[^"]*"/versionName = "${{ needs.get-next-version.outputs.new-release-version }}"/' app/build.gradle.kts
 
-      - name: Run Tests
+      - name: Run Unit Tests
         run: ./gradlew test
+
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: Run Instrumented Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 34
+          script: ./gradlew connectedCheck
 
       - name: Build with Gradle
         env:
