--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           sudo udevadm trigger --name-match=kvm
 
       - name: run tests
-        uses: reactivecircus/android-emulator-runner@v2
+        uses: reactivecircus/android-emulator-runner@2.33.0
         with:
           api-level: 34
           script: ./gradlew connectedCheck
@@ -71,7 +71,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: get-next-version
+    needs: [get-next-version, instrumented-tests, unit-tests]
     container:
       image: saschpe/android-ndk:35-jdk22.0.2_9-ndk27.0.12077973-cmake3.22.1
 
