--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           sudo udevadm trigger --name-match=kvm
 
       - name: run tests
-        uses: reactivecircus/android-emulator-runner@2.33.0
+        uses: ReactiveCircus/android-emulator-runner@v2.33.0
         with:
           api-level: 34
           script: ./gradlew connectedCheck
