--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,11 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: 11
+          java-version: 17
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
+
       - name: Build with Gradle
         run: ./gradlew test
 
@@ -47,6 +48,7 @@ jobs:
 
   get-next-version:
     runs-on: ubuntu-latest
+    needs: [instrumented-tests, unit-tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
