--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
         uses: ReactiveCircus/android-emulator-runner@v2.33.0
         with:
           api-level: 34
+          target: google_apis
+          arch: x86_64
+          profile: Pixel 7 Pro
           script: ./gradlew connectedCheck
 
   get-next-version:
