--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,9 @@ jobs:
           api-level: 34
           target: google_apis
           arch: x86_64
-          profile: Pixel 7 Pro
+          # To find list of device ids:
+          # avdmanager list device
+          profile: pixel_7_pro
           script: ./gradlew connectedCheck
 
   get-next-version:
