--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,57 @@ on:
   pull_request:
     branches:
       - master
-      - easy_updates
   workflow_dispatch:
 
 jobs:
-  get-next-version:
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Build with Gradle
+        run: ./gradlew test
+
+  instrumented-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: run tests
+        uses: ReactiveCircus/android-emulator-runner@v2.33.0
+        with:
+          api-level: 34
+          target: google_apis
+          arch: x86_64
+          # To find list of device ids:
+          # avdmanager list device
+          # Must have cli tools to run above command: https://stackoverflow.com/a/64389804/6716264
+          profile: pixel_7_pro
+          script: ./gradlew connectedCheck
+
+  get-next-version:
+    runs-on: ubuntu-latest
+    needs: [instrumented-tests, unit-tests]
+    steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -37,7 +79,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: get-next-version
+    needs: [get-next-version, instrumented-tests, unit-tests]
     container:
       image: saschpe/android-ndk:35-jdk22.0.2_9-ndk27.0.12077973-cmake3.22.1
 
@@ -48,7 +90,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Decode and save Keystore
         env:
@@ -73,10 +115,6 @@ jobs:
           VERSION=$DEFAULT_VERSION
           fi
           sed -i "s/versionName = \"[^\"]*\"/versionName = \"$VERSION\"/" app/build.gradle.kts
-        #run: sed -i 's/versionName = "[^"]*"/versionName = "${{ needs.get-next-version.outputs.new-release-version }}"/' app/build.gradle.kts
-
-      - name: Run Tests
-        run: ./gradlew test
 
       - name: Build with Gradle
         env:
